2001-04-05  Frank Warmerdam  <warmerdam@pobox.com>

	* updated mitab code from the mitab master.

2001-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: changed to check for TIFFWriteCheck instead of
	TIFFReadRGBATile for libtiff check.  Ensures we get a sufficiently
	recent libtiff.

2001-03-24  Frank Warmerdam  <warmerdam@pobox.com>

	* configure: Make --with-ogr default, and user must indicate 
	--without-ogr.

2001-03-22  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/ehdrdataset.cpp: added support for files generated
	by Arc/Info GRID which have a number of quirks, but can include
	nodata values, and projections (in .prj file). 

	* frmts/raw/rawdataset: added support for nodata values.

2001-03-21  Frank Warmerdam  <warmerdam@pobox.com>

	* GDALmake.opt.in: added port/*.o to GDAL_OBJ so that we don't
	depend on the shared library linker using cpl.a the way we expect.
	This should make things work cleaner on SGI.

2001-03-20  Frank Warmerdam  <warmerdam@pobox.com>

	* apps/gdal_translate.c: fixes from Mark Salazar.
	Added '%' for -outsize switch, fixed completion reporting, fixed
	adGeoTransform[] calculation.

2001-03-18  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/dgn: removed requirement for .dgn extention.

2001-03-16  Frank Warmerdam  <warmerdam@pobox.com>

	* OGR Shapefile driver: added support for reading and writing 
	.prj files.

	* ogr/ogr_srs_esri.cpp: added support for esri .prj files with
	WKT in them.  We don't massage datum names yet though.

2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Improved ld -shared / CXX -shared testing to preserve existing
	LD_LIBRARY_PATH incase it is needed for something like the C++
	support shared library.

	* Upgraded to use install-sh so we will have reliable install
	semantics.

===============================================================================
	
2001-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 1.1.4 release.
