@@ -1,3 +1,8 @@
+2001-04-17  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* frmts/gtiff/geotiff.cpp: fixed acces to rw mode separate planes
+	RGB images.
+
 2001-04-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* updated mitab code from the mitab master.
